<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:float="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="kmitl.it13.millibear.eatallday.controller.activity.AddFoodActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <include layout="@layout/sub_action_bar"/>

    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#8C8C8C"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.5"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_food"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/splash_screen_v1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3.7"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ชื่ออาหาร : "
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/default_name_food"
            android:inputType="text"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3.7"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ราคา : "
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_cost"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:hint="@string/hint_cost"
            android:inputType="numberDecimal"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/et_currency"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:hint="@string/currency"
            android:inputType="text"
            android:textAlignment="center" />

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginLeft="2.5dp"
            android:layout_marginRight="2.5dp"
            android:background="@drawable/ic_divide_32dp" />

        <EditText
            android:id="@+id/et_amount"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:hint="1"
            android:inputType="number"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/et_unit"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:hint="จาน"
            android:inputType="text"
            android:textAlignment="center" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.8"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/description"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1.6"
            android:background="@drawable/border_style"
            android:gravity="top"
            android:inputType="text|textMultiLine"
            android:maxLength="500"
            android:maxLines="20"
            android:padding="8dp" />

    </LinearLayout>

</LinearLayout>