...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
...
                android:text="@string/default_name_food"
                android:layout_marginRight="50dp"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_config"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="15dp"
...
